# vortex-clash

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
assets/ryker/: manifest.txt
docs/: ARCHITECTURE.md  FEEL_AUDIT.md  PLAN.md  PROGRESS.md
src/: character.c  character.h  combo.c  combo.h  feel.h  game.c  game.h  hitbox.c  hitbox.h  input.c  input.h  main.c  physics.c  physics.h  player.c  player.h  projectile.c  projectile.h  render.c  render.h  sfx.c  sfx.h  sprite.c  sprite.h  system_moves.c  system_moves.h  types.h
src/character_data/: ryker.c
tests/: test_states.c
tools/: feel_audit_frames.sh  feel_trace_report.py  repack_sheet.py  run_feel_audit.sh
